--- a/page3/app.css
+++ b/page3/app.css
@@ -203,13 +203,128 @@
   background-repeat: no-repeat; }
   #tab3 .widgets-content {
     background-color: rgba(29, 49, 120, 0.83);
-    width: 100%; }
+    width: 100%;
+    height: 100%; }
+    #tab3 .widgets-content .title h2 {
+      text-align: center;
+      font-family: "Open Sans" !important;
+      color: white;
+      font-weight: 400;
+      font-size: 30px;
+      margin-top: 60px; }
+    #tab3 .widgets-content .list-box .box {
+      margin-top: 60px;
+      width: 30%;
+      height: 330px;
+      float: left;
+      overflow: hidden; }
+      #tab3 .widgets-content .list-box .box .img {
+        width: 100%;
+        height: 50%; }
+      #tab3 .widgets-content .list-box .box .img1 {
+        background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/abb9d0ea-6690-4609-a3a5-0cd2f4df54fa-1.jpg);
+        background-origin: content-box;
+        background-size: cover; }
+      #tab3 .widgets-content .list-box .box .img2 {
+        background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/08fad061-8f04-4544-b344-878ac637bea9.jpg);
+        background-origin: content-box;
+        background-size: cover; }
+      #tab3 .widgets-content .list-box .box .img3 {
+        background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/pexels-photo-1024x683.jpg);
+        background-origin: content-box;
+        background-size: cover; }
+      #tab3 .widgets-content .list-box .box .img4 {
+        background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/pexels-photo-1024x683.jpg);
+        background-origin: content-box;
+        background-size: cover; }
+      #tab3 .widgets-content .list-box .box .img5 {
+        background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/ppantuong-01.jpg);
+        background-origin: content-box;
+        background-size: cover; }
+      #tab3 .widgets-content .list-box .box .img6 {
+        background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/ppantuong-01.jpg);
+        background-origin: content-box;
+        background-size: cover; }
+      #tab3 .widgets-content .list-box .box .text {
+        height: 50%;
+        background: #fff;
+        width: 100%; }
+        #tab3 .widgets-content .list-box .box .text p {
+          font-family: "Roboto", sans-serif !important;
+          color: #616161;
+          font-weight: 400;
+          line-height: 20px;
+          font-size: 14px;
+          text-align: center;
+          padding: 36px 12px; }
+    #tab3 .widgets-content .list-box .width {
+      height: 20px;
+      width: 5%;
+      float: left; }
 
 #tab4 {
-  height: 739px; }
+  height: 571px; }
+  #tab4 .widgets-content .title {
+    margin-top: 60px; }
+    #tab4 .widgets-content .title h2 {
+      font-family: "Open Sans" !important;
+      color: #423fb0;
+      font-weight: 400;
+      line-height: 36px;
+      letter-spacing: 0px;
+      font-size: 30px;
+      text-align: center; }
+  #tab4 .widgets-content .list-box {
+    margin-top: 60px; }
+    #tab4 .widgets-content .list-box .img {
+      width: 30%;
+      height: 345px;
+      background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/08fad061-8f04-4544-b344-878ac637bea9.jpg);
+      float: left; }
+    #tab4 .widgets-content .list-box .width {
+      width: 5%;
+      height: 20px;
+      float: left; }
 
 #tab5 {
-  height: 739px; }
+  height: 482px;
+  background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/5806ec4a3848a800556028.jpg);
+  background-color: white;
+  background-size: cover;
+  background-attachment: fixed; }
+  #tab5 .widgets-content {
+    background-color: rgba(29, 49, 120, 0.83);
+    height: 100%;
+    width: 100%; }
+    #tab5 .widgets-content .text {
+      width: 50%;
+      height: 100%;
+      float: left; }
+      #tab5 .widgets-content .text h2 {
+        font-family: "Open Sans" !important;
+        color: white;
+        font-weight: 400;
+        line-height: 34px;
+        font-size: 30px;
+        text-align: center;
+        padding-top: 84px; }
+      #tab5 .widgets-content .text .line {
+        margin-bottom: 24px; }
+      #tab5 .widgets-content .text p {
+        padding-top: 24px;
+        font-family: "Roboto", sans-serif !important;
+        color: white;
+        font-weight: 400;
+        line-height: 19px;
+        font-size: 14px; }
+    #tab5 .widgets-content .img {
+      width: 45%;
+      float: right;
+      height: 440px; }
+      #tab5 .widgets-content .img img {
+        width: 90%;
+        margin-top: 24px;
+        margin-left: 36px; }
 
 #tab6 {
   height: 739px; }
