--- a/page3/app.scss
+++ b/page3/app.scss
@@ -241,13 +241,160 @@
     .widgets-content{
     	background-color: rgba(29,49,120,0.83);
     	width:100%;
+    	height: 100%;
+    	.title{
+    		h2{
+    			text-align: center;
+			    font-family: 'Open Sans'!important;
+			    color: rgba(255,255,255,1);
+			    font-weight: 400;
+			    font-size: 30px;
+			    margin-top: 60px;
+    		}
+
+    	}
+    	.list-box{
+    		.box{
+    			margin-top: 60px;
+    			width:30%;
+    			height: 330px;
+    			float: left;
+    			overflow: hidden;
+    			.img{
+    				width:100%;
+    				height: 50%;
+    			}
+    			.img1{
+    				background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/abb9d0ea-6690-4609-a3a5-0cd2f4df54fa-1.jpg);
+    				background-origin: content-box;
+    				background-size: cover;
+    			}
+    			.img2{
+    				    background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/08fad061-8f04-4544-b344-878ac637bea9.jpg);
+    				background-origin: content-box;
+    				background-size: cover;
+    			}
+    			.img3{
+    				background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/pexels-photo-1024x683.jpg);
+    				background-origin: content-box;
+    				background-size: cover;
+    			}
+    			.img4{
+    				background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/pexels-photo-1024x683.jpg);
+    				background-origin: content-box;
+    				background-size: cover;
+    			}
+    			.img5{
+    				background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/ppantuong-01.jpg);
+    				background-origin: content-box;
+    				background-size: cover;
+    			}
+    			.img6{
+    				background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/ppantuong-01.jpg);
+  					background-origin: content-box;
+    				background-size: cover;
+    			}
+    			.text{
+    				height: 50%;
+    				background: #fff;
+    				width:100%;
+    				p{
+    					font-family: 'Roboto',sans-serif!important;
+					    color: rgba(97,97,97,1);
+					    font-weight: 400;
+					    line-height: 20px;
+					    font-size: 14px;
+					    text-align: center;
+					    padding:36px 12px;
+    				}
+    			}
+    		}
+    		.width{
+    			height: 20px;
+    			width:5%;
+    			float: left;
+    		}
+    	}
     }
 }
 #tab4{
-	height: 739px;
+	height: 571px;
+	.widgets-content{
+		.title{
+			margin-top: 60px;
+			h2{
+				font-family: 'Open Sans'!important;
+			    color: rgba(66,63,176,1);
+			    font-weight: 400;
+			    line-height: 36px;
+			    letter-spacing: 0px;
+			    font-size: 30px;
+			    text-align: center;
+			}
+		}
+		.list-box{
+			margin-top: 60px;
+			.img{
+				width:30%;
+				height: 345px;
+				    background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/08fad061-8f04-4544-b344-878ac637bea9.jpg);
+				float: left;
+			}
+
+			.width{
+				width: 5%;
+				height: 20px;
+				float: left;
+			}
+		}
+	}
 }
 #tab5{
-	height: 739px;
+	height: 482px;
+	background-image: url(https://static.ladipage.net/d/57b167c9ca57d39c18a1c57c/5806ec4a3848a800556028.jpg);
+    background-color: rgba(255,255,255,1);
+    background-size: cover;
+    background-attachment: fixed;
+    .widgets-content{
+    	background-color: rgba(29,49,120,0.83);
+    	height: 100%;
+    	width:100%;
+    	.text{
+    		width:50%;
+    		height: 100%;
+    		float: left;
+    		h2{
+    			font-family: 'Open Sans'!important;
+			    color: rgba(255,255,255,1);
+			    font-weight: 400;
+			    line-height: 34px;
+			    font-size: 30px;
+			    text-align: center;
+			    padding-top: 84px;
+    		}
+    		.line{
+    			margin-bottom: 24px;
+    		}
+    		p{
+    			padding-top: 24px;
+    			font-family: 'Roboto',sans-serif!important;
+			    color: rgba(255,255,255,1);
+			    font-weight: 400;
+			    line-height: 19px;
+			    font-size: 14px;
+    		}
+    	}
+    	.img{
+    		width:45%;
+    		float: right;
+    		height: 440px;
+    		img{
+    			width:90%;
+    			margin-top: 24px;
+    			margin-left: 36px;
+    		}
+    	}
+    }
 }
 #tab6{
 	height: 739px;
